--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="global.css" />
+    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
+
+    <!-- Mapbox GL JS CSS -->
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet"/>
+    <script src="map.js" type="module"></script>
+
     <title>Bikewatching</title>
+
   </head>
+  
   <body>
     <h1>🚴🏼‍♀️ Bikewatching</h1>
+
+      <label for="">
+        Filter by time:
+        <!-- <input type="range" id="time-slider"> -->
+        <input type="range" id="time-slider" min="-1" max="1439" value="-1">
+        <time id="selected-time">11:59 PM</time>
+        <em id="any-time">(any time)</em>
+      </label>
+
+    <div id="map">
+      <svg></svg>
+    </div>
+
+    <div class="legend legend-swatches">
+      <span class="legend-label">LEGEND:</span>
+      <div><span class="swatch departure"></span>More departures</div>
+      <div><span class="swatch balanced"></span>Balanced</div>
+      <div><span class="swatch arrival"></span>More arrivals</div>
+    </div>
+    
+
+
   </body>
 </html>
